--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_row_plus_constant_row.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_row_plus_constant_row.xml
@@ -32,11 +32,13 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="24pt"
-            android:paddingLeft="5pt"
+            android:paddingStart="5pt"
+            android:paddingEnd="5pt"
             android:layout_marginRight="10pt"
             android:orientation="horizontal">
 
             <ImageView
+                android:contentDescription="@string/row1"
                 android:id="@+id/initialRow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -48,9 +50,9 @@
                 android:id="@+id/Plus"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical|right"
+                android:gravity="center_vertical|end"
                 android:layout_weight="1.15"
-                android:text="+"
+                android:text="@string/Plus"
                 android:textColor="@color/black"
                 android:textSize="16pt" />
 
@@ -59,12 +61,13 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight=".8"
-                android:gravity="center_vertical|right"
-                android:text="0"
+                android:gravity="center_vertical|end"
+                android:text="@string/_0"
                 android:textColor="@color/black"
                 android:textSize="20pt" />
 
             <ImageView
+                android:contentDescription="@string/row2"
                 android:id="@+id/pivotRow"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -75,6 +78,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1.1"
+                android:contentDescription="@string/rightArrow"
                 android:src="@drawable/right_arrow" />
 
             <ImageView
@@ -82,6 +86,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:contentDescription="@string/row1"
                 android:src="@drawable/r1" />
 
         </LinearLayout>
@@ -109,19 +114,19 @@
                     style="@style/NumberButton"
                     android:id="@+id/row1Button"
                     android:layout_height="25pt"
-                    android:text="Row 1"/>
+                    android:text="@string/row1"/>
 
                 <Button
                     style="@style/NumberButton"
                     android:id="@+id/row2Button"
                     android:layout_height="25pt"
-                    android:text="Row 2"/>
+                    android:text="@string/row2"/>
 
                 <Button
                     style="@style/NumberButton"
                     android:id="@+id/row3Button"
                     android:layout_height="25pt"
-                    android:text="Row 3"/>
+                    android:text="@string/row3"/>
 
             </LinearLayout>
 
@@ -203,7 +208,7 @@
                 <Button
                     android:id="@+id/buttonFrac"
                     style="@style/EquationVariable"
-                    android:text="/" />
+                    android:text="@string/slash" />
 
             </LinearLayout>
 
@@ -214,22 +219,25 @@
                 <Button
                     android:id="@+id/button0"
                     style="@style/NumberButton"
-                    android:text="0" />
+                    android:text="@string/_0" />
 
-                <Button
+                <ImageButton
                     android:id="@+id/buttonDone"
                     style="@style/EquationVariable"
-                    android:text="Done" />
+                    android:contentDescription="@string/confirm"
+                    android:src="@drawable/check_mark"/>
 
-                <Button
+                <ImageButton
                     android:id="@+id/buttonCancel"
                     style="@style/EquationVariable"
-                    android:text="Can" />
+                    android:contentDescription="@string/cancel"
+                    android:src="@drawable/cancel"/>
 
-                <Button
+                <ImageButton
+                    android:contentDescription="@string/rightArrow"
                     android:id="@+id/buttonMove"
                     style="@style/EquationVariable"
-                    android:text="Move" />
+                    android:src="@drawable/right_arrow_white" />
 
 
 
