--- a/FinalProject/Sprint1/app/src/main/res/layout/activity_swap_rows.xml
+++ b/FinalProject/Sprint1/app/src/main/res/layout/activity_swap_rows.xml
@@ -42,21 +42,21 @@
         <Button
             android:id="@+id/row1Button"
             style="@style/SwapButton"
-            android:text="Row 1"
+            android:text="@string/row1"
             tools:layout_editor_absoluteX="77dp"
             tools:layout_editor_absoluteY="711dp" />
 
         <Button
             android:id="@+id/row2Button"
             style="@style/SwapButton"
-            android:text="Row 2"
+            android:text="@string/row2"
             tools:layout_editor_absoluteX="77dp"
             tools:layout_editor_absoluteY="711dp" />
 
         <Button
             android:id="@+id/row3Button"
             style="@style/SwapButton"
-            android:text="Row 3"
+            android:text="@string/row3"
             tools:layout_editor_absoluteX="77dp"
             tools:layout_editor_absoluteY="711dp" />
 
@@ -73,6 +73,7 @@
         tools:layout_editor_absoluteX="66dp">
 
         <ImageView
+            android:contentDescription="@string/row1"
             android:id="@+id/firstRowImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -80,6 +81,7 @@
             app:srcCompat="@drawable/r1" />
 
         <ImageView
+            android:contentDescription="Double negative"
             android:id="@+id/doubleArrow"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -87,6 +89,7 @@
             app:srcCompat="@drawable/doublearrow" />
 
         <ImageView
+            android:contentDescription="@string/row2"
             android:id="@+id/secondRowImage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -102,15 +105,15 @@
         android:layout_marginBottom="20dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <Button
+        <ImageButton
             android:id="@+id/confirmSwap"
             style="@style/SwapButton"
-            android:text="Swap" />
+            android:src="@drawable/check_mark" />
 
-        <Button
+        <ImageButton
             android:id="@+id/cancelSwap"
             style="@style/SwapButton"
-            android:text="Cancel" />
+            android:src="@drawable/cancel" />
 
     </LinearLayout>
 
