--- a/FinalProject/Sprint1/app/src/main/res/values/styles.xml
+++ b/FinalProject/Sprint1/app/src/main/res/values/styles.xml
@@ -40,7 +40,7 @@
         <item name="android:layout_weight">1</item>
         <item name="backgroundTint">@color/numberButtonColor</item>
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">10pt</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:layout_margin">0.5pt</item>
     </style>
 
@@ -49,7 +49,7 @@
         <item name="android:layout_height">30pt</item>
         <item name="android:layout_weight">1</item>
         <item name="backgroundTint">@color/actionButtonColor</item>
-        <item name="android:textSize">10pt</item>
+        <item name="android:textSize">24sp</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:layout_margin">0.5pt</item>
     </style>
