--- a/MCCFollowAlongProjectPt2/app/src/main/res/layout/activity_main_class_list.xml
+++ b/MCCFollowAlongProjectPt2/app/src/main/res/layout/activity_main_class_list.xml
@@ -21,6 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:autofillHints="name"
             android:ems="10"
             android:inputType="textPersonName" />
 
@@ -30,6 +31,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
+            android:autofillHints="name"
             android:inputType="textPersonName" />
 
     </LinearLayout>
@@ -40,7 +42,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
 
-        android:layout_marginLeft="10pt"
+        android:layout_marginStart="10pt"
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout"
         tools:layout_editor_absoluteX="23dp">
@@ -119,7 +121,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Day"
+            android:hint="@string/day"
             android:inputType="date" />
 
         <EditText
@@ -128,7 +130,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:ems="10"
-            android:hint="Year"
+            android:hint="@string/year"
             android:inputType="date" />
     </LinearLayout>
 
@@ -218,8 +220,9 @@
             android:layout_marginLeft="10pt"
             android:layout_marginRight="10pt"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="start"
             android:paddingLeft="4pt"
+            android:paddingRight="4pt"
             android:text="@string/cert" />
 
         <TextView
@@ -229,8 +232,9 @@
             android:layout_marginLeft="10pt"
             android:layout_marginRight="10pt"
             android:layout_weight="1"
-            android:gravity="left"
+            android:gravity="start"
             android:paddingLeft="4pt"
+            android:paddingRight="4pt"
             android:text="@string/major" />
     </LinearLayout>
 
