--- a/MCCFollowAlongProject/app/src/main/res/layout/activity_main.xml
+++ b/MCCFollowAlongProject/app/src/main/res/layout/activity_main.xml
@@ -75,8 +75,9 @@
         android:layout_width="382dp"
         android:layout_height="365dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginButton"
-        app:srcCompat="@drawable/mcc_logo"
-        tools:layout_editor_absoluteX="5dp" />
+        app:srcCompat="@drawable/mcc_logo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
